[tool.poetry]
name = "AI BOT"
version = "0.1.0"
description = ""
authors = ["wijez <viet.info.43@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
chainlit = "^1.1.306"
openai = "^1.35.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
